force-app/main/default/objects/Class__c/fields/Class_Count__c.field-meta.xml
<CustomField>
    <fullName>Class_Count__c</fullName>
    <label>Class Count</label>
    <summaryForeignKey>Junction_Class__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>