force-app/main/default/objects/Class__c/fields/Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Class_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Class Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>