force-app/main/default/objects/Class__c/validationRules/Class_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Class_Filled</fullName>
    <active>true</active>
    <description>Once the class is full, no other students should be added.</description>
    <errorConditionFormula>Class_Count__c &gt;  Class_Size__c</errorConditionFormula>
    <errorMessage>Class cannot go over its size</errorMessage>
</ValidationRule>