force-app/main/default/objects/Class__c/listViews/All_Classes.listView-meta.xml
<ListView>
    <fullName>All_Classes</fullName>
    <columns>NAME</columns>
    <columns>Class_Size__c</columns>
    <columns>Teacher__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Classes</label>
</ListView>